--- a/src/components/Debugger/debugger.css
+++ b/src/components/Debugger/debugger.css
@@ -14,6 +14,15 @@
     font-size: 1.5em;
 }
 
+.debug_data_box {
+    padding-top: 2%;
+}
+
+#executeBtn {
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
 .tape_box {
     background-color: black;
     padding-left: 3%;
